Worked on integration of 'blueprints' based user profile mechanism.
